updated PartialetchIDT, updated tutorials

--- a/tutorials/Tutorial.ipynb
+++ b/tutorials/Tutorial.ipynb
@@ -5,7 +5,7 @@
    "id": "773bf588-a3c6-4c6c-a48d-88f541312f86",
    "metadata": {},
    "source": [
-    "# ```pirel``` TUTORIAL\n",
+    "# ```pirel``` Tutorial : introduction and ```pcells```\n",
     "\n",
     "This is a tutorial for the [```pirel```](https://github.com/giumc/pirel) Python3 module.\n",
     "\n",
