--- a/tutorials/Tutorial_modifiers.ipynb
+++ b/tutorials/Tutorial_modifiers.ipynb
@@ -5,6 +5,8 @@
    "id": "6f47c6a0-b9f3-4bf5-b982-fea8de28b3db",
    "metadata": {},
    "source": [
+    "# ```pirel``` Tutorial : ```modifiers```\n",
+    "\n",
     "In this tutorial I will show you how to add features to ```pirel.pcells``` classes.\n",
     "\n",
     "In fact, the functions in ```pirel.modifiers``` return new classes with extended functionality."
