--- a/tutorials/Tutorial.ipynb
+++ b/tutorials/Tutorial.ipynb
@@ -23,12 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3179ea70-409e-4086-8109-0cc924ceb7d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pirel.pcells as pc"
+    "import pirel.pcells as pc\n",
+    "#matplotlib widget"
    ]
   },
   {
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "34721618-80a9-4b97-8539-aec4dfd29ad7",
    "metadata": {},
    "outputs": [],
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f1d472dd-b2cb-4fec-8f0c-7507029404a4",
    "metadata": {},
    "outputs": [
@@ -92,7 +93,7 @@
        "Type                        IDT"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "fdbd3fbb-a1f6-4c92-92c9-2b661935bf89",
    "metadata": {
     "tags": []
@@ -132,7 +133,7 @@
        "Type                        IDT"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e5de2091-50f5-4d43-a576-80b45241c9a0",
    "metadata": {
     "tags": []
@@ -584,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
