--- a/tutorials/Tutorial.ipynb
+++ b/tutorials/Tutorial.ipynb
@@ -18,12 +18,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "There are ***four*** packages within ```pirel```: ```pcells``` , ```modifiers``` , ```sweeps``` and ```tools``` . Let's start with ```pcells```."
+    "There are ***four*** packages within ```pirel```: ```pcells``` , ```modifiers``` , ```sweeps``` and ```sketch_tools``` . Let's start with ```pcells```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3179ea70-409e-4086-8109-0cc924ceb7d4",
    "metadata": {},
    "outputs": [],
@@ -49,14 +49,14 @@
     "\n",
     "In general, these modules are growing pretty fast in size, so it wouldn't make sense to go through all the pcells/modifiers/sweeps/tools.\n",
     "\n",
-    "Instead, try to ```help(pirel.pcells)```,```help(pirel.tools)``` when you are looking for information!\n",
+    "Instead, try to ```help(pirel.pcells)```,```help(pirel.s)``` when you are looking for information!\n",
     "\n",
     "An example of layout class is the InterDigiTated fingers ```pc.IDT```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "34721618-80a9-4b97-8539-aec4dfd29ad7",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f1d472dd-b2cb-4fec-8f0c-7507029404a4",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "Type                        IDT"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fdbd3fbb-a1f6-4c92-92c9-2b661935bf89",
    "metadata": {
     "tags": []
@@ -133,7 +133,7 @@
        "Type                        IDT"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e5de2091-50f5-4d43-a576-80b45241c9a0",
    "metadata": {
     "tags": []
@@ -193,7 +193,7 @@
     "\n",
     "you can explicitly get this ```Device``` instance by calling the ```draw()``` method.\n",
     "\n",
-    "At that point, you can play around with the cells by using the powerful tools in ```phidl```.\n",
+    "At that point, you can play around with the cells by using the powerful s in ```phidl```.\n",
     "\n",
     "In this example, we will align and distribute two ```idt``` Device using the ```phidl``` module."
    ]
@@ -345,22 +345,22 @@
     {
      "data": {
       "text/plain": [
-       "{'IDTLength': 200.0,\n",
+       "{'IDTLayer': 2,\n",
+       " 'IDTLength': 200.0,\n",
        " 'IDTPitch': 20.0,\n",
        " 'IDTYOffset': 10.0,\n",
        " 'IDTCoverage': 0.7,\n",
        " 'IDTN': 4,\n",
-       " 'IDTLayer': 2,\n",
        " 'IDTActiveAreaMargin': 0.5,\n",
        " 'BusLayer': 2,\n",
        " 'BusSizeY': 40.0,\n",
-       " 'EtchPitX': 40.0,\n",
        " 'EtchPitLayer': 4,\n",
+       " 'EtchPitX': 40.0,\n",
+       " 'AnchorLayer': 2,\n",
        " 'AnchorSizeX': 20.0,\n",
        " 'AnchorSizeY': 80.0,\n",
        " 'AnchorMetalizedX': 16.0,\n",
        " 'AnchorMetalizedY': 84.0,\n",
-       " 'AnchorLayer': 2,\n",
        " 'AnchorEtchLayer': 4,\n",
        " 'AnchorN': 1,\n",
        " 'AnchorSpacingX': 6.666667,\n",
@@ -530,12 +530,12 @@
    "id": "1faef048-b339-4501-b00d-65822fc37df8",
    "metadata": {},
    "source": [
-    "If you are bothered by the ```phidl.Port``` labels, just pass the optional ```joined=True``` to the ```check``` method in ```pirel.tools```"
+    "If you are bothered by the ```phidl.Port``` labels, just pass the optional ```joined=True``` to the ```check``` method in ```pirel.s```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "c2a759e4-b4e5-4634-9655-ce507065f26b",
    "metadata": {},
    "outputs": [
@@ -553,11 +553,11 @@
     }
    ],
    "source": [
-    "import pirel.tools as pt\n",
+    "import pirel.sketch_tools as st\n",
     "\n",
     "fbe_cell=fbe.draw()\n",
     "\n",
-    "pt.check(fbe_cell,joined=True)"
+    "st.check(fbe_cell,joined=True)"
    ]
   },
   {
@@ -567,6 +567,14 @@
    "source": [
     "Check out the next tutorial on how to power up the ```LayoutPart``` classes using [```pirel.modifiers```](./Tutorial_modifiers.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "744540a6-7a26-47a0-b6ba-c739e914359f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -585,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.2"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
