attempt to retrieve stable version

--- a/tutorials/Tutorial.ipynb
+++ b/tutorials/Tutorial.ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3179ea70-409e-4086-8109-0cc924ceb7d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pirel.pcells as pc\n",
-    "#matplotlib widget"
+    "#matplotlib inline"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "34721618-80a9-4b97-8539-aec4dfd29ad7",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f1d472dd-b2cb-4fec-8f0c-7507029404a4",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "Type                        IDT"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "fdbd3fbb-a1f6-4c92-92c9-2b661935bf89",
    "metadata": {
     "tags": []
@@ -133,7 +133,7 @@
        "Type                        IDT"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e5de2091-50f5-4d43-a576-80b45241c9a0",
    "metadata": {
     "tags": []
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e3db1e98-53ff-4e93-90ce-3ff877d15c69",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b47ff283-9ced-4350-84b5-128b8fb733e7",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "536332f4-219c-463d-b5d2-b3a2468e47f1",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "{}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e2ca9dba-c6a6-470b-974c-b3637f6dcfa2",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        " 'Anchor': pirel.pcells.MultiAnchor}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "fb8d7e72-2756-430a-8f50-07a0521dbdc1",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
        " 'Type': 'LFERes'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "b5ade928-38fa-4830-a5d0-7299bba19b9c",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "903a5b3c-9f45-4292-a592-f486fb582ad9",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
        "x=181.0 y =210.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "42864cdf-0fa9-43cc-ab80-5427a3285d8b",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "751564f1-5730-492c-9f90-06f7ffde9171",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "c2a759e4-b4e5-4634-9655-ce507065f26b",
    "metadata": {},
    "outputs": [
@@ -567,14 +567,6 @@
    "source": [
     "Check out the next tutorial on how to power up the ```LayoutPart``` classes using [```pirel.modifiers```](./Tutorial_modifiers.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "744540a6-7a26-47a0-b6ba-c739e914359f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
