--- a/tutorials/Tutorial_sweeps.ipynb
+++ b/tutorials/Tutorial_sweeps.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "import pirel.pcells as pc\n",
     "import pirel.modifiers as pm\n",
-    "import pirel.tools as pt\n",
+    "import pirel.sketch_tools as pt\n",
     "\n",
     "dut=pm.addPad(pm.makeArray(pm.addPartialEtch(pc.LFERes),n=2),side=('top','bottom'))(name='SweptDevice')\n",
     "\n",
@@ -199,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[Kdrawing array 2 of 2"
+      "\u001b[K\u001b[K"
      ]
     },
     {
@@ -222,14 +222,6 @@
     "\n",
     "dut_matrix.view()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "283e48e4-f59a-437b-be91-cd0f46c2d86f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -248,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
